tests/type-errors/no_storable_in_asset.arl
archetype no_storable_in_asset

asset my_asset {
  id: string;
  op: operation;
}

entry exec () {
  ()
}
